--- a/stlyle.css
+++ b/stlyle.css
@@ -7,7 +7,7 @@ h1{
     margin-bottom: 30px;
     
 }
-.container{
+.Container Welcom{
     display: grid;
     grid-template-columns: 100px 200px;
 }
