--- a/stlyle.css
+++ b/stlyle.css
@@ -7,6 +7,9 @@ h1{
     margin-bottom: 30px;
     
 }
+h2{
+    color: rgb(235, 232, 56);
+}
 .Container Welcom{
     display: grid;
     grid-template-columns: 100px 200px;
